<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".ThirdActivity">


    <LinearLayout
        android:textColor="@color/black"
        android:id="@+id/PointFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/PointTo"

        >
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_from"
            android:layout_weight="1"
            android:textAllCaps="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </TextView>

        <EditText
            android:textColor="@color/black"
            android:id="@+id/StreetFrom"
            android:layout_width="82dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:hint="@string/street"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>

        <EditText
            android:textColor="@color/black"
            android:id="@+id/HouseFrom"
            android:layout_width="79dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:hint="@string/house"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>

        <EditText
            android:textColor="@color/black"
            android:id="@+id/FlatFrom"
            android:layout_width="74dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:hint="@string/flat"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>
    </LinearLayout>





    <LinearLayout
        android:textColor="@color/black"
        android:id="@+id/PointTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/PointFrom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnOk"
        >
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_to"
            android:layout_weight="1"
            android:textAllCaps="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </TextView>

        <EditText
            android:textColor="@color/black"
            android:id="@+id/StreetTo"
            android:layout_width="78dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:hint="@string/street"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>

        <EditText
            android:textColor="@color/black"
            android:id="@+id/HouseTo"
            android:layout_width="79dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:hint="@string/house"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>

        <EditText
            android:textColor="@color/black"
            android:id="@+id/FlatTo"
            android:layout_width="75dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:hint="@string/flat"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:textColor="@color/black"
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintBottom_toTopOf="@id/btnSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PointTo"
        >

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.SwitchCompat
        android:textColor="@color/black"
        android:id="@+id/btnSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="turn off/on Sounds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOk"
        android:padding="30sp">
    </androidx.appcompat.widget.SwitchCompat>


</androidx.constraintlayout.widget.ConstraintLayout>